--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/ws": "^8.18.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-editable-title": "^1.3.1",
     "react-icons": "^5.4.0",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
