--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "cypress": "^14.5.4",
     "puppeteer": "^24.16.2",
+    "start-server-and-test": "^2.1.3",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
   }
