--- a/tools/cypress/fixtures/measurements.json
+++ b/tools/cypress/fixtures/measurements.json
@@ -1,18 +1,18 @@
 {
-  "timestamp": "2025-12-07T04:44:32.962Z",
+  "timestamp": "2025-12-07T23:32:10.554Z",
   "viewport": {
     "width": 980,
     "height": 1835
   },
   "container": {
-    "width": 327,
-    "height": 441,
-    "computedStyle": "294px",
-    "className": "grid-container layout-0 fit-to-screen",
-    "posterWidth": "30vw",
-    "gap": "12px",
+    "width": 201,
+    "height": 300,
+    "computedStyle": "200px",
+    "className": "grid-container",
+    "posterWidth": "clamp(120px, 25vw, 200px)",
+    "gap": "16px",
     "allStyles": {
-      "width": "327px",
+      "width": "201px",
       "maxWidth": "100%",
       "minWidth": "0px"
     }
@@ -21,10 +21,10 @@
   "gridItems": [
     {
       "index": 0,
-      "width": 294,
-      "height": 441,
-      "computedWidth": "294px",
-      "computedMaxWidth": "588px"
+      "width": 200,
+      "height": 300,
+      "computedWidth": "200px",
+      "computedMaxWidth": "none"
     }
   ],
   "analysis": {
