chore: refine git development for linting, testing
- backend.py linted by ruff
- remove test artifact from cypress execution
- code is mature enough to pre-commit linting

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ build/
 # api keys
 .env
 
+# test artifacts
+tools/cypress/fixtures/measurements.json
+
 # populated templates
 backend/systemd/aoife.service
 backend/nginx/aoife
