--- a/backend/nginx/aoife.template
+++ b/backend/nginx/aoife.template
@@ -1,3 +1,7 @@
+# Rate limiting zones
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=30r/s;
+limit_req_zone $binary_remote_addr zone=strict_limit:10m rate=10r/s;
+
 # HTTP to HTTPS redirect
 server {
     listen 80;
@@ -29,6 +33,8 @@ server {
     ssl_session_tickets off;
 
     location / {
+        limit_req zone=api_limit burst=50 nodelay;
+        client_max_body_size 10m;
         proxy_pass http://127.0.0.1:5001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -37,5 +43,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 10s;
+        proxy_read_timeout 30s;
+    }
+
+    location /api/gamesdb {
+        limit_req zone=strict_limit burst=20 nodelay;
+        proxy_pass http://127.0.0.1:5001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 10s;
+        proxy_read_timeout 30s;
     }
 }
