--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "biome check --write",
     "preview": "vite preview",
+    "test": "start-server-and-test dev http://localhost:5173 mocha",
     "test:measure": "cypress run --config-file tools/cypress.config.js --spec tools/cypress/e2e/quick-measure.cy.js",
     "test:measure:open": "cypress open --config-file tools/cypress.config.js"
   },
@@ -24,7 +25,10 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "chai": "^4.3.10",
     "cypress": "^14.5.4",
+    "js-yaml": "^4.1.0",
+    "mocha": "^11.7.5",
     "puppeteer": "^24.16.2",
     "start-server-and-test": "^2.1.3",
     "typescript": "~5.6.2",
