--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "biome check --write",
     "preview": "vite preview",
-    "test": "start-server-and-test dev http://localhost:5173 mocha"
+    "test": "start-server-and-test dev http://localhost:5173 mocha",
+    "test:integration": "start-server-and-test dev http://localhost:5173 \"mocha --group integration\"",
+    "test:e2e": "start-server-and-test dev http://localhost:5173 \"mocha --group e2e\""
   },
   "dependencies": {
     "@types/ws": "^8.18.1",
