fix: backend deployment containment on prod

--- a/backend/systemd/aoife.template.service
+++ b/backend/systemd/aoife.template.service
@@ -7,7 +7,7 @@ After=nginx.service
 User=__user__
 WorkingDirectory=__workdir__
 EnvironmentFile=__workdir__/.env
-ExecStart=__workdir__/.venv/bin/gunicorn --bind 127.0.0.1:__port__ --workers 2 backend:app
+ExecStart=__workdir__/.venv/bin/gunicorn --chdir __workdir__ --pythonpath __workdir__ --bind 127.0.0.1:__port__ --workers 2 backend:app
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
