chore: extend biome linting to CSS and fix misuses
- applies all linting rules to .ts, .tsx, .js, .css
- fixes type hints to TypeScript, removes vague any's, removes unused
  imports and vars, and issues with React hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,17 +3,14 @@ repos:
     hooks:
       - id: biome
         name: biome
-        entry: npm run lint
+        entry: npx biome lint --write
         language: system
-        types: [javascript]
-        files: \.(ts|tsx|js|jsx)$
-
+        files: '\.(ts|tsx|js|jsx|css)$'
       - id: ruff-check
         name: ruff check
         entry: ruff check
         language: system
         types: [python]
-
       - id: ruff-format
         name: ruff format
         entry: ruff format
