--- a/biome.json
+++ b/biome.json
@@ -25,6 +25,14 @@
       "quoteStyle": "single"
     }
   },
+  "css": {
+    "formatter": {
+      "enabled": true
+    },
+    "linter": {
+      "enabled": true
+    }
+  },
   "assist": {
     "enabled": true,
     "actions": {
