--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@types/ws": "^8.18.1",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.7.9",
+    "framer-motion": "^12.23.26",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
