--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,4 @@
 # TMDB API Key (required for movies/TV)
 # Get yours at: https://www.themoviedb.org/settings/api
 VITE_TMDB_API_KEY=your_tmdb_api_key_here
-
-# Future API keys (when implemented)
-# VITE_IGDB_CLIENT_ID=your_igdb_client_id
-# VITE_IGDB_CLIENT_SECRET=your_igdb_client_secret
-# VITE_SPOTIFY_CLIENT_ID=your_spotify_client_id
-# VITE_SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-# VITE_LASTFM_API_KEY=your_lastfm_api_key
+VITE_DEV_SERVER_ORIGIN=http://localhost:5173
