--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": false
   },
   "files": {
-    "includes": ["**", "!!**/dist"]
+    "includes": ["**", "!!**/dist", "!!**/.cypress-config"]
   },
   "formatter": {
     "enabled": true,
