--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/ws": "^8.18.1",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.7.9",
+    "embla-carousel": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
     "framer-motion": "^12.23.26",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
