chore: untangle env vars between prod, dev, and github

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 # TMDB API Key (required for movies/TV)
 # Get yours at: https://www.themoviedb.org/settings/api
-VITE_TMDB_API_KEY=your_tmdb_api_key_here
+TMDB_API_KEY=your_tmdb_api_key_here
+
+# GamesDB public key (CI/prod)
+GAMESDB_PUBLIC_KEY=your_gamesdb_public_key_here
+
+# GamesDB private key (local dev)
+GAMESDB_PRIVATE_KEY=your_gamesdb_private_key_here
 VITE_DEV_SERVER_ORIGIN=http://localhost:5173
