--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^12.23.26",
+    "pino": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
