--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aoife",
   "private": true,
-  "version": "0.6.4",
+  "version": "0.6.5",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^12.23.26",
     "pino": "^10.1.0",
+    "react-hook-form": "^7.56.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
