--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@tanstack/react-query": "^5.90.12",
     "@types/ws": "^8.18.1",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.7.9",
@@ -21,9 +22,9 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^12.23.26",
     "pino": "^10.1.0",
-    "react-hook-form": "^7.56.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
     "ws": "^8.18.3"
   },
