--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
