--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "biome check --write",
     "preview": "vite preview",
-    "test": "start-server-and-test dev http://localhost:5173 mocha",
-    "test:integration": "start-server-and-test dev http://localhost:5173 \"mocha --group integration\"",
-    "test:e2e": "start-server-and-test dev http://localhost:5173 \"mocha --group e2e\""
+    "test": "NODE_OPTIONS=--no-warnings=ExperimentalWarning,--no-warnings=DEP0180 start-server-and-test dev http://localhost:5173 mocha",
+    "test:integration": "NODE_OPTIONS=--no-warnings=ExperimentalWarning,--no-warnings=DEP0180 start-server-and-test dev http://localhost:5173 \"mocha --group integration\"",
+    "test:e2e": "NODE_OPTIONS=--no-warnings=ExperimentalWarning,--no-warnings=DEP0180 start-server-and-test dev http://localhost:5173 \"mocha --group e2e\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
